--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 @mixin container{
     width: 100%;
-    max-width: 1120px;
+    height: 100%;
+    max-width: 90vw;
     margin: 0 auto;
     display: block;
 }
