--- a/src/components/shared/Footer/Footer.scss
+++ b/src/components/shared/Footer/Footer.scss
@@ -3,7 +3,7 @@
 
 .footer {
     width: 100%;
-    height: 50px;
+    height: 6%;
     display: flex;
     align-self: center;
     background: $color-primary;
