--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  background-color: #FFDDD2;
+  background-color: #f2e9e4;
 }
 
 code {
