--- a/src/pages/ListEdit/ListEdit.scss
+++ b/src/pages/ListEdit/ListEdit.scss
@@ -4,17 +4,81 @@
 .edit{
     @include container;
     height: 100%;
-    display: flex;
+    margin-top: 1vw;
     &-form{
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        flex-direction: column;
+        padding: 1rem;
+        margin-left: 16vw;
+        align-items: flex-start;
         &-group{
-            margin: 0 auto;
-            margin-left: 1vw;
+            padding-bottom: 3vw;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
             &-label{
-                display: block;
+                font-weight: 600;
+
             }
+            &-input{
+                padding-left: 1rem;
+                padding-right: 5rem;
+                margin-top: 1rem;
+                padding-top: .5rem;
+                padding-bottom: .5rem;
+                width: 100%;
+                height: 100%;
+                border: none;
+                border-bottom: 1px solid #22223b;
+                font-size: 16px;
+                &-date{
+                    padding-left: 1rem;
+                    margin-top: 1rem;
+                    padding-top: .5rem;
+                    padding-bottom: .5rem;
+                    width: 100%;
+                    height: 100%;
+                    font-size: 16px;
+                }
+            }
+            #descricao{
+                margin: 16px 0px 0px;
+                width: 666px;
+                height: 149px;
+            }
+            &-select{
+                padding-right: 5rem;
+                margin-top: 1rem;
+                font-size: 16px;
+                &-option{
+                    text-align: center;
+                }
+            }
+        }
+        &-buttons{
+            display: flex;
+            justify-content: space-around;
+            margin-left: 20vw;
+            transition: .4s all;
+            &-cancel{
+                @include button;
+                margin-right:6vw;
+                color: $color-font-default;
+                background-color: $color-danger;
+                &:hover {
+                    transform: scale(1.1);
+                    background-color: #881919;
+                  }
+            }
+            &-submit{
+                @include button;
+                color: $color-font-default;
+                background-color: $color-success;
+                &:hover {
+                    transform: scale(1.1);
+                    background-color: #006400;
+                  }
+            }  
         }
     }
 }
