--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,5 @@
-$color-primary: #006D77;
-$color-secondary: #FFDDD2;
+$color-primary: #22223b;
+$color-secondary: #f2e9e4;
 $color-success: #38b000;
 $color-danger: #ba181b;
 $color-font-default: #ffff;
