--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,500&display=swap');
+
 @mixin container{
     width: 100%;
     height: 100%;
     max-width: 90vw;
     margin: 0 auto;
     display: block;
+}
+
+@mixin button{
+    border: none;
+    border-radius: 6%;
+    font-size: 15px;
+    cursor: pointer;
+    padding: .6rem;
+    display: flex;
 }
